feat: implement get user settings endpoint
